# cmake-test

test2-directories/: CMakeLists.txt  main  main.cpp
test2-directories/src/: test.cpp
test3-sharedlib/: CMakeLists.txt
test3-sharedlib/include/: test.h
test4-staticlib/: CMakeLists.txt
test5-usinglib/: CMakeLists.txt
